fix drawer form alignment, make align flex-start to fix jank

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
 }
 
 .darken {
+  z-index: 1;
   background-color: rgba(0, 0, 0, 0.45);
 }
 
